[project]
name = "python-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.115.12",
    "msgspec>=0.19.0",
]

[dependency-groups]
dev = [
    "ruff==0.12.2",
]

[tool.uv]
package = true

[tool.ruff.lint]
extend-safe-fixes = ["E", "I"]
select = [
    # Mccabe
    "C90",
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # Bandit
    "S",
]

[tool.ruff]
line-length = 120
unsafe-fixes = true
